# astrolog_clone

./: .gitignore  AGENTS.md  CMakeLists.txt  DESIGN.md  GEMINI.md  Makefile  PROJECT_SUMMARY.md  PROJECT_SUMMARY_GEMINI.md  astrolog  astrolog.as  astrolog.as~  astrolog.cpp  astrolog.sh
astephem/: se_index.txt
astro-cli/: CMakeLists.txt  Makefile  REPORT.html  REPORT.md
astro-cli/src/: command.c  command.h  config.c  config.h  date_util.c  date_util.h  engine.c  engine.h  main.c  parser.c  parser.h
astro-cli/tests/: fake_astrolog.sh  minunit.h  smoke.sh  test_config.c  test_date_util.c  test_engine.c  test_parser.c
sepm/: sepm9801.se1  sepm9899.se1
